# openstreetphoto

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: photo-nodes-italia.geojson  photo-nodes.geojson
docs/superpowers/plans/: 2026-07-03-lombardia-download.md  2026-07-03-photo-map-server.md  2026-07-03-photo-nodes-extract.md  2026-07-03-photo-title-fallback.md  2026-07-03-type-title-description.md  2026-07-05-ricerca-luoghi.md
docs/superpowers/specs/: 2026-07-03-lombardia-download-design.md  2026-07-03-permalink-modale-design.md  2026-07-03-photo-map-server-design.md  2026-07-03-photo-nodes-extract-design.md  2026-07-03-photo-title-fallback-design.md  2026-07-03-type-title-description-design.md  2026-07-05-ricerca-luoghi-design.md
src/openstreetphoto/: download.py  extract.py  serve.py  update.py
src/openstreetphoto/web/: index.html  italy.html
tests/: test_download.py  test_extract.py  test_serve.py  test_update.py  test_web_image_url.py  test_web_photo_title.py  test_web_search.py  test_web_type_title.py
